--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="w3-col l8 s12">
     <!-- Blog entry -->
     <div class="w3-card-4 w3-margin w3-white">
-      <img src="C:\Users\Shovon Karmaker\Desktop\BD_Hinus\media\image2.jpg" alt="image" style="width:100%">
+      <img src="/media/image2.jpg" alt="image" style="width:100%">
       <div class="w3-container">
         <h3><b>Purpose of Bangladeshi Hindus</b></h3>
         <!-- <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5> -->
@@ -65,7 +65,7 @@
   <div class="w3-col l4">
     <!-- About Card -->
     <div class="w3-card w3-margin w3-margin-top">
-    <img src="C:\Users\Shovon Karmaker\Desktop\BD_Hinus\media\image3.jpg" style="width:100%">
+    <img src="/media/image3.jpg" style="width:100%">
       <div class="w3-container w3-white">
         <h4><b>About Us</b></h4>
         <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
@@ -79,12 +79,12 @@
       </div>
       <ul class="w3-ul w3-hoverable w3-white">
         <li class="w3-padding-16">
-          <img src="C:\Users\Shovon Karmaker\Desktop\BD_Hinus\media\post1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+          <img src="/media/post1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Save Bangladeshi Hindus</span><br>
           <span>We want Justice <a href=""></a></span>
         </li>
         <li class="w3-padding-16">
-          <img src="C:\Users\Shovon Karmaker\Desktop\BD_Hinus\media\post2.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+          <img src="/media/post2.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">সীতাকুণ্ড-চন্দ্রনাথ সংকট</span><br>
           <span></span>
         </li> 
