--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="w3-col l8 s12">
     <!-- Blog entry -->
     <div class="w3-card-4 w3-margin w3-white">
-      <img src="media/image2.jpg" alt="image" style="width:100%">
+      <img src="https://github.com/shuvo1997/BDH_Community/blob/main/media/image2.jpg" alt="image" style="width:100%">
       <div class="w3-container">
         <h3><b>Purpose of Bangladeshi Hindus</b></h3>
         <!-- <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5> -->
