Modified image urls

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="w3-col l4">
     <!-- About Card -->
     <div class="w3-card w3-margin w3-margin-top">
-    <img src="/media/image3.jpg" style="width:100%">
+    <img src="https://github.com/shuvo1997/BDH_Community/blob/main/media/image3.jpg" style="width:100%">
       <div class="w3-container w3-white">
         <h4><b>About Us</b></h4>
         <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
@@ -79,12 +79,12 @@
       </div>
       <ul class="w3-ul w3-hoverable w3-white">
         <li class="w3-padding-16">
-          <img src="/media/post1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+          <img src="https://github.com/shuvo1997/BDH_Community/blob/main/media/post1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Save Bangladeshi Hindus</span><br>
           <span>We want Justice <a href=""></a></span>
         </li>
         <li class="w3-padding-16">
-          <img src="/media/post2.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+          <img src="https://github.com/shuvo1997/BDH_Community/blob/main/media/post2.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">সীতাকুণ্ড-চন্দ্রনাথ সংকট</span><br>
           <span></span>
         </li> 
